Pull request #154: WDZO-1644: fixes for copy promo-campaign
Squashed commit of the following:

commit 385b9d7e69169688303ff79a89bd082cc46d41a0
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Wed Mar 3 09:56:11 2021 +0300

    WDZO-1644: fix promo-campaign type when copy
    fix prefix for promo-campaign name when copy
    reset promo-code type and appCode when copy promo-campaogn
    some refactoring code

--- a/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/Steps/Templates/Template.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/Steps/Templates/Template.module.css
@@ -19,8 +19,13 @@
     justify-content: space-between;
 }
 
+.row:not(:last-child) {
+    margin-bottom: 20px;
+}
+
 .title {
-    margin-bottom: 16px;
+    margin-bottom: 10px;
+    font-weight: bold;
 }
 
 .text {
